{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 11,
  "lineage": "66ab763a-2d70-f5d4-7ee2-00aa28a3e868",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:010526284247:security-group/sg-0a43065ed73a7df4c",
            "description": "Allow inbound traffic from any where on Port 80",
            "filter": [
              {
                "name": "tag:name",
                "values": [
                  "webapp-4"
                ]
              },
              {
                "name": "tag:stage",
                "values": [
                  "prod"
                ]
              },
              {
                "name": "tag:used_by",
                "values": [
                  "public_alb"
                ]
              }
            ],
            "id": "sg-0a43065ed73a7df4c",
            "name": "internet-facing-alb-webapp-4-prod",
            "tags": {
              "name": "webapp-4",
              "stage": "prod",
              "used_by": "public_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eba9fec92ad9863"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:010526284247:security-group/sg-0f9c1ccd1de2b2340",
            "description": "Inboud traffic from Internet_Facing_ALB",
            "filter": [
              {
                "name": "tag:name",
                "values": [
                  "webapp-4"
                ]
              },
              {
                "name": "tag:stage",
                "values": [
                  "prod"
                ]
              },
              {
                "name": "tag:used_by",
                "values": [
                  "private_ecs"
                ]
              }
            ],
            "id": "sg-0f9c1ccd1de2b2340",
            "name": "ecs-container-from-alb-webapp-4-prod",
            "tags": {
              "name": "webapp-4",
              "stage": "prod",
              "used_by": "private_ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eba9fec92ad9863"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:010526284247:loadbalancer/app/webapp-alb-webapp-4-prod/afd86b5f6bebf4a3",
            "arn_suffix": "app/webapp-alb-webapp-4-prod/afd86b5f6bebf4a3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-webapp-4-prod-480550519.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:010526284247:loadbalancer/app/webapp-alb-webapp-4-prod/afd86b5f6bebf4a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb-webapp-4-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a43065ed73a7df4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013778321d0959dca"
              },
              {
                "subnet_id": "subnet-09717d760978ee9a8"
              }
            ],
            "subnets": [
              "subnet-013778321d0959dca",
              "subnet-09717d760978ee9a8"
            ],
            "tags_all": {
              "Name": "webapp-4",
              "stage": "prod"
            },
            "vpc_id": "vpc-01eba9fec92ad9863",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "data.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_rds_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:010526284247:listener/app/webapp-alb-webapp-4-prod/afd86b5f6bebf4a3/eaabf83b87395e44",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:010526284247:targetgroup/ecs-tg-webapp-4-prod/f1740d640501497e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:010526284247:listener/app/webapp-alb-webapp-4-prod/afd86b5f6bebf4a3/eaabf83b87395e44",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:010526284247:loadbalancer/app/webapp-alb-webapp-4-prod/afd86b5f6bebf4a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Name": "webapp-4",
              "stage": "prod"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "data.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:010526284247:targetgroup/ecs-tg-webapp-4-prod/f1740d640501497e",
            "arn_suffix": "targetgroup/ecs-tg-webapp-4-prod/f1740d640501497e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/test_connection/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:010526284247:targetgroup/ecs-tg-webapp-4-prod/f1740d640501497e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-tg-webapp-4-prod",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "webapp-4",
              "stage": "prod"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01eba9fec92ad9863"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:010526284247:security-group/sg-0473b9f39e925e760",
            "description": "Allow PostgreSQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows all outbound traffic to all IP addresses on all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0473b9f39e925e760",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming traffic from ECS tasks on port 5432 for PostgreSQL database access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9c1ccd1de2b2340"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-webapp-4-prod",
            "name_prefix": "",
            "owner_id": "010526284247",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "webapp-4",
              "stage": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eba9fec92ad9863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.ecs_sg"
          ]
        }
      ]
    }
  ]
}